This changelog shows an overview of what changed throughout releases, with the latest release or development log on top.

Update jQuery  Mobile to 1.0-final (Great job jQuery Mobile team!!)
#5976 Enhanced support for date input type TVs on mobile devices.
#5867 Support for MODX 2.0.8.
Fix breadcrumb links passing the wrong URL parameter.
#5957 Fix slash issues on server configurations which have magic_quotes_gpc enabled. 
Add option to disable/enable textile on create resource controller.
Further internationalization efforts. Will need more work than this, but every bit helps..!
#5873 Force UTF-8 html entities to prevent encoding issues on view details.

++++++++++++++++++++++++++++++++
++   HandyMan 0.9.2-dev1      ++
++   Released on 2011-10-25   ++
++++++++++++++++++++++++++++++++
#5872 Autogrow textarea on pageload and collapsible elements
Update jQuery Mobile to 1.0-rc2.
Fix blocker bug with HandyMan where it would be using MODX chunks instead of file system templates.

++++++++++++++++++++++++++++++++
++   HandyMan 0.9.1-dev1      ++
++   Released on 2011-10-12   ++
++++++++++++++++++++++++++++++++

#5877 Add buttons to update or view a resource in resource/view
Add note to unsupported TV types that they are not (yet) fully supported.
#5854 Add option to disable Textile while editing a resource and proper inheritance from system setting > resource setting.
#5870 More UI/UX updates to start screen en resource update panel.
Show number of resources in a context on context selection screen.
#5849 Add option to context root to create a new Resource in the root.
Make sure the resource_overview lexicon key exists, if not use the < 2.1 resource_view for the resource view option item.
#5885 Work around iPad (iOS) not resizing the screen properly on orientation change to landscape.
Make sure the cache gets cleared when "Clear Cache?" was ticked.
Fix label used for (un)publish resource.
#5883 Use MODX core processors for resource/create & resource/update.