@@ -1,5 +1,6 @@
 This changelog shows an overview of what changed throughout releases, with the latest release or development log on top.
 
+#5994 Inherit template from parent when creating a new resource, or use default_template system setting.
 Update jQuery  Mobile to 1.0-final (Great job jQuery Mobile team!!)
 #5976 Enhanced support for date input type TVs on mobile devices.
 #5867 Support for MODX 2.0.8.
